@@ -1,27 +1,28 @@
-# Sample .travis.yml for R projects.
-#
-# See https://github.com/craigcitro/r-travis/wiki
-#     https://github.com/eddelbuettel/r-travis/
-
-sudo: required                                     
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
+sudo: required
+
+dist: trusty
+
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  # add our launchpad repo which has (inter alia) the newest QuantLib
+  # - sudo add-apt-repository -y ppa:edd/misc
+  - ./run.sh bootstrap
 
 install:
   - ./travis-tool.sh install_aptget libprotobuf-dev libprotoc-dev protobuf-compiler r-cran-rcpp r-cran-runit r-cran-rcurl r-cran-highlight
 
-script: 
-  - ./travis-tool.sh run_tests
+script:
+  - ./run.sh run_tests
 
 after_failure:
-  - ./travis-tool.sh dump_logs
+  - ./run.sh dump_logs
 
 notifications:
   email:
     on_success: change
     on_failure: change
+
