@@ -1,3 +1,7 @@
+2016-08-13  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Switch to using run.sh for Travis CI
+
 2016-07-19  Craig Radcliffe  <chradcliffe@gmail.com>
 
 	* configure.in: Make sure that CXXFLAGS is from the environment
